<resources>
    <string name="app_name">SpaceX Info</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Nav drawer -->
    <string name="nav_header_title">SpaceX App</string>
    <string name="nav_header_subtitle">by Chris Scheid</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_icon_attribution">Icons provided by https://www.flaticon.com</string>
    <string name="nav_header_image_attribution">Images provided by SpaceX and NASA</string>

    <!-- Menu -->
    <string name="menu_company">Company</string>
    <string name="menu_crew">Crew</string>
    <string name="menu_rockets">Rockets</string>
    <string name="menu_launches">Upcoming Launches</string>

    <!-- Company Page -->
    <string name="company_name_label">Company Name</string>
    <string name="company_summary_label">Summary</string>
    <string name="company_founder_label">Founder</string>
    <string name="company_founded_label">Founded</string>
    <string name="company_employees_label">Employees</string>
    <string name="company_ceo_label">CEO</string>
    <string name="company_coo_label">COO</string>
    <string name="company_cto_label">CTO</string>
    <string name="company_cto_propulsion_label">CTO Propulsion</string>

    <!-- Crew List Page -->
    <string name="crew_page_title">SpaceX Crew Roster</string>
    <string name="crew_list_agency">Agency: %s</string>

    <!-- Crew Detail Page -->
    <string name="crew_detail_page_title">Crew Member Details</string>
    <string name="crew_name_label">Name</string>
    <string name="crew_agency_label">Agency</string>
    <string name="crew_status_label">Status</string>

    <!-- Rocket List Page -->
    <string name="rocket_list_page_title">Rockets</string>
    <string name="rocket_list_first_flight">First Flight: %s</string>

    <!-- Rocket Detail Page -->
    <string name="rocket_detail_page_title">Rocket Details</string>
    <string name="rocket_name_label">Name</string>
    <string name="rocket_description_label">Description</string>
    <string name="rocket_stages_label">Stages</string>
    <string name="rocket_boosters_label">Boosters</string>
    <string name="rocket_cost_per_launch_label">Cost Per Launch</string>
    <string name="rocket_first_flight_label">First Flight</string>
    <string name="rocket_country_label">Country</string>
    <string name="rocket_wikipedia_label">Wikipedia</string>

    <!-- Launch List Page -->
    <string name="launch_list_page_title">Upcoming Launches</string>
    <string name="launch_list_flight_number">Flight Number: %s</string>

    <!-- Launch Detail Page -->
    <string name="launch_detail_page_title">Launch Details</string>
    <string name="launch_name_label">Name</string>
    <string name="launch_description_label">Description</string>
    <string name="launch_flight_number_label">Flight Number</string>
    <string name="launch_date_label">Launch Date</string>
    <string name="launch_wikipedia_label">Wikipedia</string>
    <string name="rocket_launch_instructions">Drag the rocket up to launch!</string>

    <!-- Notifications -->
    <string name="notification_channel_name">SpaceX Notification Channel</string>
    <string name="notification_channel_description">SpaceX Notification Channel</string>
    <string name="notification_description">Get ready! Only 10 minutes until launch...</string>

</resources>