<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_company"
            android:title="@string/menu_company" />
        <item
            android:id="@+id/nav_crew"
            android:icon="@drawable/ic_crew"
            android:title="@string/menu_crew" />
        <item
            android:id="@+id/nav_rockets"
            android:icon="@drawable/ic_rocket_dark"
            android:title="@string/menu_rockets" />

        <item
            android:id="@+id/nav_launches"
            android:icon="@drawable/ic_launch_dark"
            android:title="@string/menu_launches" />
    </group>
</menu>