<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.justmobiledev.android.spacexinfo.ui.crew.CrewDetailViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/PageLayoutStyle"
        android:background="@color/black"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textview_crew_detail_title"
            android:text="@string/crew_detail_page_title"
            style="@style/PageTitleStyle" />

            <ImageView
                android:id="@+id/imageview_crew_photo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/margin_large"
                android:adjustViewBounds="true"
                android:contentDescription="Crew member photo"
                android:src="@drawable/crew_placeholder"
                tools:srcCompat="@drawable/crew_placeholder" />

            <View style="@style/DividerStyle" />

            <GridLayout
                android:id="@+id/gridlayout"
                tools:context=".ui.home.HomeFragment"
                style="@style/GridStyle">

                <TextView
                    android:id="@+id/textview_name_label"
                    android:text="@string/crew_name_label"
                    style="@style/LabelStyle" />
                <TextView
                    android:id="@+id/textview_name"
                    android:text="@{viewModel.crewMember.name}"
                    style="@style/FormTextStyle" />

                <TextView
                    android:id="@+id/textview_agency_label"
                    android:text="@string/crew_agency_label"
                    style="@style/LabelStyle" />

                <TextView
                    android:id="@+id/textview_agency"
                    style="@style/FormTextStyle"
                    android:maxLines="5"
                    android:text="@{viewModel.crewMember.agency}" />

                <TextView
                    android:id="@+id/textview_status_label"
                    android:text="@string/crew_status_label"
                    style="@style/LabelStyle" />
                <TextView
                    android:id="@+id/textview_status"
                    android:text="@{viewModel.crewMember.status}"
                    style="@style/FormTextStyle" />

            </GridLayout>
        </LinearLayout>
</layout>